[tool.poetry]
name = "StompZone-SQLite"
version = "0.1.0"
description = "A Python Flask application providing a RESTful interface to a SQLite database. This API enables you to manage generic tokens for arbitrary user IDs (eg, Discord)."
authors = ["DJ Stomp <djstomp@djstomp.net>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replit = "^3.2.4"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.5"
flask-marshmallow = "^0.15.0"
marshmallow-sqlalchemy = "^0.29.0"
waitress = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
